--- a/output/template.tmpl
+++ b/output/template.tmpl
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>{{.Title}}</title>
+    <title>{{.Options.Title}}</title>
 
     {{ if .Options.EnableFont }}<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">{{ end }}
     <style>
