Added support for token.TitlePragraph

--- a/output/html/template.tmpl
+++ b/output/html/template.tmpl
@@ -16,6 +16,9 @@
         p.align-right {
             text-align: right;
         }
+        h1 {
+            font-size: 48px;
+        }
         * {
             font-family: 'Roboto', sans-serif;
             font-size: 1.05rem;
