--- a/output/html/template.tmpl
+++ b/output/html/template.tmpl
@@ -16,9 +16,17 @@
         p.align-right {
             text-align: right;
         }
-        h1 {
-            font-size: 48px;
-        }
+        {{/*
+            //Titles:
+            //H1: Indent Title
+            //H3: Indent Subtitle
+            //H2: Title
+            //H4: Subtitle
+        */}}
+        h1 {font-size: 3.5rem; text-align: center;}
+        h2 {font-size: 2.5rem;}
+        h3 {font-size: 1.5rem; text-align: center;}
+        h4 {font-size: 1rem;}
         * {
             font-family: 'Roboto', sans-serif;
             font-size: 1.05rem;
