Revert eNote/utils.EscapeHTML, removed useless case in Telegra.ph Output Engine and added meta tag to template.tmpl for ensuring UTF-8

--- a/output/html/template.tmpl
+++ b/output/html/template.tmpl
@@ -2,7 +2,7 @@
 
 <head>
     <title>{{.Options.Title}}</title>
-
+    <meta charset="UTF-8"></meta>
     {{ if .Options.EnableFont }}<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">{{ end }}
     <style>
         p.align-left {
