Update HTML Output Engine with support for Code Block

--- a/output/html/template.tmpl
+++ b/output/html/template.tmpl
@@ -16,6 +16,15 @@
         p.align-right {
             text-align: right;
         }
+
+        pre code{
+            background-color: #DDDDDD;
+            display: block;
+            padding: 0.5rem;
+            padding-right: 1rem;
+            width: fit-content;
+        }
+
         {{/*
             //Titles:
             //H1: Indent Title
