--- a/output/html/template.tmpl
+++ b/output/html/template.tmpl
@@ -36,6 +36,15 @@
         h2 {font-size: 2.5rem;}
         h3 {font-size: 1.5rem; text-align: center;}
         h4 {font-size: 1rem;}
+
+        blockquote {
+            border-left: 4px solid #000000;
+            padding-left: 10px;
+            margin: 5px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        
         * {
             font-family: 'Roboto', sans-serif;
             font-size: 1.05rem;
