Changed the template and other simple functions to make more HTML5 complaint
Checkboxs now are single node
Image now are single node
Added manifest in the default template
removed the wrong closing of meta tag inside the template

--- a/output/html/template.tmpl
+++ b/output/html/template.tmpl
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 
 <head>
     <title>{{.String.Title}}</title>
-    <meta charset="UTF-8"></meta>
+    <meta charset="UTF-8">
     {{ if .Bool.EnableFont }}<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">{{ end }}
     <style>
         * {
