--- a/docs/src/template.tmpl
+++ b/docs/src/template.tmpl
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>{{.String.Title}}</title>
-        <link rel="stylesheet" href="/index.css">
+        <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Patrick+Hand" rel="stylesheet">
 
         {{safeHTML .String._Head}}
